--- a/app/src/pages/page-jobs-editor.html
+++ b/app/src/pages/page-jobs-editor.html
@@ -354,7 +354,7 @@
                 <iron-icon icon="hardware:device-hub"></iron-icon> Tree
             </paper-button> -->
         <!-- disabled="true" -->
-        <paper-button class="btn btn-secondary toggleEditor btOpenToggle" on-click="_toggleEditor" hidden$="[[!fileOpened]]">
+        <paper-button disabled="true" class="btn btn-secondary toggleEditor btOpenToggle" on-click="_toggleEditor" hidden$="[[!fileOpened]]">
             <iron-icon icon="icons:menu"></iron-icon>
         </paper-button>
 
