update icon linux

--- a/app/src/pages/page-jobs-editor.html
+++ b/app/src/pages/page-jobs-editor.html
@@ -355,7 +355,8 @@
             <!-- <paper-button class="btn btn-outline-warning toggleEditor" on-click="_jobTreeDialogToggle" hidden$="[[!fileOpened]]">
                 <iron-icon icon="hardware:device-hub"></iron-icon> Tree
             </paper-button> -->
-            <paper-button disabled="true" class="btn btn-secondary toggleEditor btOpenToggle" on-click="_toggleEditor" hidden$="[[!fileOpened]]">
+            <!-- disabled="false" -->
+            <paper-button  class="btn btn-secondary toggleEditor btOpenToggle" on-click="_toggleEditor" hidden$="[[!fileOpened]]">
                 <iron-icon icon="icons:menu"></iron-icon>
             </paper-button>
 
